--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-animatable": "1.3.3",
+    "react-native-elements": "^2.2.1",
+    "react-native-gesture-handler": "1.6.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "2.0.1",
+    "react-number-format": "^4.4.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
