--- a/app.json
+++ b/app.json
@@ -1,26 +1,20 @@
 {
   "expo": {
-    "name": "COVID-19",
-    "slug": "COVID-19",
+    "name": "COVID-19 Tracker",
+    "slug": "COVID-19-tracker-v1",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./icon.png",
     "splash": {
-      "image": "./assets/load.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FFFFFF"
     },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
     "ios": {
       "supportsTablet": true
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "android": {
+      "package": "com.anishrajan.covid19livetrackerv1"
     }
   }
 }
