--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "covid-19tracker",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -16,6 +17,7 @@
     "react-native-animatable": "1.3.3",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "1.6.0",
+    "react-native-shadow-cards": "^1.0.2",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
     "react-number-format": "^4.4.1",
