--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-animatable": "1.3.3",
-    "react-native-elements": "^2.2.1",
-    "react-native-gesture-handler": "1.6.0",
+    "expo": "~37.0.3",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^2.0.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-shadow-cards": "^1.0.2",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
-    "react-number-format": "^4.4.1",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
