--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
   "expo": {
-    "name": "COVID-19 Tracker",
-    "slug": "COVID-19-tracker-v1",
+    "name": "COVID-19 India Tracker",
+    "slug": "COVID-19-tracker-v2",
     "sdkVersion": "37.0.0",
     "version": "1.0.0",
-    "orientation": "portrait",
     "icon": "./icon.png",
     "splash": {
       "image": "./assets/splash.png",
