--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: Create a report to help us improve
 title: "[Bug]: "
-labels: ["bug"]
+labels: ["kind/bug"]
 body:
   - type: markdown
     attributes:
